commit on master

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "name": "Abednego Edet",
     "email": "asapabedi@gmail.com",
     "bio": "Fullstack web developer and programmer. I help brands and businesses create high quality personalized web projects. I listen to lots of music.",
-    "phone": "09056815062",
+    "phone": "+2349056815062",
     "paypal": "asapabedi",
     "github": "asapabedi",
     "dev": "asapabedi",
